grammar.js
    document: $ => seq(
      optional($.preamble),
      repeat($.section),
    ),

    setting_section_header: $ => seq(
      '[',
      choice(
        alias(
          /(Logging|System|Device|Stereo|Rendering|Hunting|Profile|ConvergenceMap|Loader|Input)/i,
          $.header_identifier,
        ),
        choice(
          seq(
            alias(choice($._customresource_header_prefix, $._resourcepool_header_prefix), $.header_prefix),
            alias($._suffixed_resource_header, $.header_identifier),
          ),
          seq(
            alias($._include_header_prefix, $.header_prefix),
            alias($._suffixed_include_header, $.header_identifier),
          ),
        ),
      ),
      optional(']'),
      $._newline,
    ),

    setting_section_body: $ => repeat1($.setting_statement),

    setting_section: $ => seq(
      field('header', $.setting_section_header),
      optional(field('body', $.setting_section_body)),
    ),

    setting_statement: $ => choice(
      // general setting keys that don't need special handling
      seq(
        field('key', choice($._setting_statement_key, $._bracketed_setting_statement_key)),
        '=',
        field('value', $.setting_statement_value),
        $._newline,
      ),
      // the hash key needs to take free_text, which would normally conflict with fixed_value here
      seq(
        field('key', alias(/hash/i, $.setting_statement_key)),
        '=',
        field('value', alias($._hash_value, $.setting_statement_value)),
        $._newline,
      ),
      // the shader name keys used in custom shader sections which can be a path or null
      seq(
        field('key', alias(/[vhdgpc]s/i, $.setting_statement_key)),
        '=',
        field('value', alias($._specific_custom_shader_value, $.setting_statement_value)),
        $._newline,
      ),
      // any keys that take KeyBindings, which can also be a single free_text node or single exception_character node
      seq(
        field('key', alias(setting_section_key_binding_keys, $.setting_statement_key)),
        '=',
        field('value', alias($._specific_key_binding_value, $.setting_statement_value)),
        $._newline,
      ),
      // remaining keys that can take paths/files so a value that would have a conflict btwn fixed_value and free_text is always treated as a path
      seq(
        field('key', $._directory_setting_statement_key),
        '=',
        field('value', alias($._specific_directory_value, $.setting_statement_value)),
        $._newline,
      ),
      // the analyse_options key has a value that conflicts with the value of the marking_actions key
      // so unfortunately, because there is no backtracking and `mono_snapshot` is longer than `mono`
      // we need to do special handling for this key
      seq(
        field('key', alias(/analyse_options/i, $.setting_statement_key)),
        '=',
        field('value', alias($._frame_analysis_option_list, $.setting_statement_value)),
        $._newline,
      ),
    ),

    // $._hash_vale and $._frame_analysis_option_list
    // These exist only to keep the two special cases in line with how $.setting_statement_value is parsed for non-special situations
    // Basically, I need (setting_statement_value (_)) and not just (setting_statement_value)
    _hash_value: $ => $.free_text,

    _frame_analysis_option_list: $ => $.frame_analysis_option_list,

    _specific_custom_shader_value: $ => choice($.null, $._path_value),

    _specific_key_binding_value: $ => choice($.free_text, $.exception_character, $.key_binding_modifier, $.key_binding_expression),

    _specific_directory_value: $ => choice(alias($.free_text, $.path_key_value), $._path_value),

    _directory_setting_statement_key: $ =>
      // path/file only keys:
      alias(token(prec(-1, setting_section_directory_value_keys)), $.setting_statement_key),

    _bracketed_setting_statement_key: $ => alias(custom_shader_keys_with_brackets, $.setting_statement_key),

    _setting_statement_key: $ => alias($.fixed_value, $.setting_statement_key),

    setting_statement_value: $ => choice(
      $.resource_format,
      alias(resource_type_values, $.resource_type),
      $.boolean_value,
      $.string,
      $._path_value,
      $.static_operational_expression,
      $.fuzzy_match_expression,
      $._list_expression,
      field('fixed_value', alias($.fixed_value, $.fixed_setting_key_value)),
    ),

    _list_expression: $ => choice(
      $.list_expression,
      $._fixed_value_list,
    ),

    // written to guarantee 2 or more desired nodes
    key_binding_expression: $ => seq(
      choice(
        $.key_binding_modifier,
        $.exception_character,
        $.free_text,
      ),
      repeat1(
        choice(
          $.key_binding_modifier,
          $.exception_character,
          $.free_text,
        ),
      ),
    ),

    key_binding_modifier: _ => /(?:(?:no_)?(?:vk_)?(?:ctrl|control|alt|shift|windows)|no_modifiers)/i,

    marking_actions_option_list: $ => repeat1($.marking_actions_option),

    frame_analysis_option_list: $ => repeat1($.frame_analysis_option),

    static_binary_expression: $ => _generate_binary_expr_rule($.static_operational_expression),

    named_variable: $ => seq(
      '$',
      $._antiwhitespace, // XXX: Consider getting rid of this and folding functionality into following external rule
      $._pooled_variable_guard,
      optional($._namespace_resolution),
      alias(/[a-z_]\w+|[a-z]/i, $.variable_identifier),
    ),

    _namespace_resolution: $ => seq(
      alias($._namespace_resolution_start, '\\'),
      alias($._namespace_resolution_content, $.namespace),
      alias($._namespace_resolution_end, '\\'),
    ),

    numeric_constant: _ => choice(
      token(/[+-]?\d+(\.\d+(e[-+]\d+)?)?/i),
      token(/[+-]?\.\d+/i), // apparently 3dmigoto allows floats of the form -.56 and the like
    ),

    boolean_value: _ => /(?:true|false|yes|no|on|off)/i,

    _path_value: $ => choice(
      alias(path_regex, $.path_key_value),
      alias(file_regex, $.file_key_value),
    ),

    frame_analysis_option: _ => new RustRegex(`(?xi)(
      hold|stereo|mono|
      dump_(?:rt|depth|tex|[cvi]b)|jp(?:s|e?g)|(?:jp(?:s|e?g)_)?dds|buf|txt|desc|clear_rt|persist|
      filename_(?:reg|handle)|log|dump_on_(?:unmap|update)|deferred_ctx_(?:immediate|accurate)|
      share_dupes|symlink|dump_(?:rt|depth|tex)_(?:jps|dds)|dump_[cvi]b_txt
    )`),

    marking_actions_option: _ => /(clipboard|hlsl|asm|regex|mono_snapshot|stereo_snapshot|snapshot_if_pink)/i,

    resource_format: _ => dxgi_types_regex,

    // Exists to enforce required prefix when used as an operand
    free_text: _ => /[^\\\/;="${}\s]+/i,

    comment: $ => prec(1, seq(
      field('start', ';'),
      field('content', /[^\r\n]*/),
      $._newline,
    )),
